# querychat

./: .gitignore  DESCRIPTION  README.md  querychat.Rproj
R/: prompt.R  querychat.R
inst/www/: styles.css
man/: querychat_init.Rd  querychat_server.Rd
python-package/: README.md  pyproject.toml
python-package/examples/: app.py  data_description.md  greeting.md
python-package/querychat/: __init__.py  querychat.py
python-package/querychat/prompt/: prompt.md
python-package/querychat/static/css/: styles.css
r-package/: DESCRIPTION  NAMESPACE  README.md
r-package/R/: prompt.R  querychat.R
r-package/inst/prompt/: prompt.md
r-package/man/: querychat_init.Rd  querychat_server.Rd  querychat_system_prompt.Rd  querychat_ui.Rd
