[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "querychat"
version = "0.1.0"
description = "Chat with your data using natural language"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Posit", email = "info@posit.co"},
]
dependencies = [
    "duckdb",
    "pandas",
    "shiny",
    "shinywidgets",
    "htmltools",
    "chatlas",
    "narwhals",
]

[project.urls]
Homepage = "https://github.com/posit-dev/querychat"
Issues = "https://github.com/posit-dev/querychat/issues"

[tool.hatch.build.targets.wheel]
packages = ["querychat"]

[tool.hatch.build.targets.sdist]
include = [
    "querychat",
    "LICENSE",
    "README.md",
]